# replaceball

./: .gitignore  Cargo.toml  start-local-registry.sh
.cargo/: config.toml
crates/replaceball_display/: Cargo.toml
crates/replaceball_display/src/: display.rs  event_description.rs  main.rs  ring_buffer.rs
crates/replaceball_echo/: Cargo.toml
crates/replaceball_echo/src/: avg.rs  main.rs  sim.rs  team.rs
crates/replaceball_server/: Cargo.toml
crates/replaceball_sim/: Cargo.toml
crates/replaceball_sim/src/: at_bat.rs  base_running.rs  consts.rs  fielding.rs  game.rs  half_inning.rs  hit.rs  inning.rs  levels.rs  lib.rs  location.rs  pitch.rs  player.rs  stat.rs
