[package]
name = "replaceball_display"
version = "0.1.0"
edition = "2021"
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dependencies.replaceball_sim]
version = "0.5.0"
registry = "local-registry"
path = "../replaceball_sim/"

