[package]
name = "replaceball_sim"
version = "0.4.0"
edition = "2021"
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "serde"]

[dependencies]
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25.2"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
rand = "0.8.5"
rand_distr = "0.4.3"

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]
